tests/snapshots/snapshot_screens__contacts_empty.snap
---
source: tests/snapshot_screens.rs
description: "MyInfo → press '2' (Contacts tab)"
expression: output
---
                                    Contacts

┌ [#] No contacts yet ─────────────────────────────────────────────────────────┐
│                                                                              │
│  [-] Exchange cards in person                                                │
│      Meet someone nearby and share your contact card securely.               │
└──────────────────────────────────────────────────────────────────────────────┘















[Enter] Exchange Now  [a] Add Contact  [?] help  [Esc] back  [q] quit
   1 My Card    │ 2 ★ Contacts  │  3 Exchange   │   4 Groups    │    5 More
