tests/snapshots/snapshot_screens__contacts_search_by_name.snap
---
source: tests/snapshot_screens.rs
description: "Contacts → type search 'Ahmed'"
expression: output
---
                                    Contacts

┌ Contacts (1) ────────────────────────────────────────────────────────────────┐
│▸ AN Ahmed Nikolaus  +1-203-107-1013                                          │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘















 Search: Ahmed  [Esc] clear
[a] Add Contact  [g] Groups  [?] help  [Esc] back  [q] quit
   1 My Card    │ 2 ★ Contacts  │  3 Exchange   │   4 Groups    │    5 More
