tests/snapshots/snapshot_screens__devices.snap
---
source: tests/snapshot_screens.rs
description: Settings → select Devices
expression: output
---
                                 [1/4]  ● ○ ○ ○
                                   Link Device

┌ QR Code ─────────────────────────────────────────────────────────────────────┐
│  [QR_IMAGE_REDACTED]                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
[Esc] Cancel  [?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More
