tests/snapshots/snapshot_screens__edit_field_dialog.snap
---
source: tests/snapshot_screens.rs
description: MyInfo → press Enter on field
expression: output
---
                                   Edit Field

Editing: Mobile

Value
┌──────────────────────────────────────────────────────────────────────────────┐
│+41 79 123 45 67                                                              │
└──────────────────────────────────────────────────────────────────────────────┘














[EDIT]   [Enter] Save  [Esc] Cancel  [?] help  [Esc] back  [q] quit
  1 ★ My Card   │  2 Contacts   │  3 Exchange   │   4 Groups    │    5 More
