tests/snapshots/snapshot_screens__edit_name_dialog.snap
---
source: tests/snapshot_screens.rs
description: Settings → select Display Name
expression: output
---
                                Edit Display Name

Display Name
┌ ✎ editing ───────────────────────────────────────────────────────────────────┐
│Alice Smith█                                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
















[EDIT]   [Enter] Save  [Esc] Cancel  [?] help  [Esc] back  [q] quit
  1 ★ My Card   │  2 Contacts   │  3 Exchange   │   4 Groups    │    5 More
